# crafting-interpreters

interpreter/: README.md
src/: CMakeLists.txt  IdentTable.hpp  Lexer.hpp  LexerStrCmp.hpp  TokenInfo.hpp  lex.cpp
src/ast/: expressions.hpp  statements.hpp  syntax_tree.hpp
src/ast/test/: cases.cpp
src/ast/visitors/: evaluator.cpp  evaluator.hpp  printing_visitor.hpp  template_visitor.hpp  visitor.hpp
src/lex/: IdentTable.hpp  Lexer.hpp  LexerStrCmp.hpp  TokenInfo.hpp  ident_table.hpp  lexer.hpp  lexer_aux.hpp  scan_info.hpp  scanner.hpp  token.hpp  token_info.hpp  token_type.hpp
src/lex/test/: cases.cpp
src/parse/: Parse.hpp  SyntaxTree.hpp  Visitor.hpp  parse.hpp  parse_expr.cpp  syntax_tree.hpp  visitor.hpp
src/parse/test/: cases.cpp  test.cpp
src/parse/visitors/: Evaluator.hpp  base_object.hpp  evaluator.hpp  template_visitor.hpp
src/play/: CMakeLists.txt  main.cpp
src/rt/: base_object.hpp  ifunction.hpp  intrinsic.hpp  native_function.hpp  primitive_type.hpp  type_error.hpp
src/rt/scope/: environment.hpp
src/rt/test/: cases.cpp  environment.cpp  primitive_type.cpp
src/tests/: CMakeLists.txt
src/tests/ast/: cases.cpp
src/tests/parse/: main.cpp
src/tests/play/: cases.cpp
